[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/textures/etc/Black.png" type="Texture" id=1]
[ext_resource path="res://assets/themes/buttons_theme.theme" type="Theme" id=2]
[ext_resource path="res://src/Menus/audio_menu/audio_menu.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/new_dynamicfont.tres" type="DynamicFont" id=4]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 4 )

[node name="audio_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.439216 )
margin_right = 482.0
margin_bottom = 272.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="Label" parent="."]
margin_left = 185.0
margin_top = 27.2973
margin_right = 301.0
margin_bottom = 43.2973
text = "Music"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicSlider" type="HSlider" parent="."]
margin_left = 185.0
margin_top = 45.73
margin_right = 301.0
margin_bottom = 61.73
max_value = 1.0
step = 0.001
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sound" type="Label" parent="."]
margin_left = 185.0
margin_top = 74.5683
margin_right = 301.0
margin_bottom = 109.568
text = "Sound"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundSlider" type="HSlider" parent="."]
margin_left = 185.0
margin_top = 98.0551
margin_right = 301.0
margin_bottom = 114.055
max_value = 1.0
step = 0.001
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="."]
margin_left = 199.0
margin_top = 195.0
margin_right = 288.0
margin_bottom = 217.0
theme = ExtResource( 2 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="value_changed" from="MusicSlider" to="." method="_on_Music_value_changed"]
[connection signal="value_changed" from="SoundSlider" to="." method="_on_Sound_value_changed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
